@@ -4,7 +4,7 @@
 	<groupId>fr.insee.rmes</groupId>
 	<artifactId>Bauhaus-BO</artifactId>
 	<packaging>war</packaging>
-	<version>2.1.2</version>
+	<version>3.0.0</version>
 	<name>Bauhaus-Back-Office</name>
 	<description>Back-office services for Bauhaus</description>
 	<url>https://github.com/InseeFr/Bauhaus-Back-Office</url>
@@ -38,13 +38,30 @@
 
 		<jersey.version>2.19</jersey.version>
 		<jackson.version>2.10.1</jackson.version>
-		<rdf4j.version>3.2.1</rdf4j.version>
+		<rdf4j.version>3.5.0</rdf4j.version>
 		<swagger.core.version>2.0.9</swagger.core.version>
-		<spring.version>4.3.25.RELEASE</spring.version>
+		<spring.version>4.3.30.RELEASE</spring.version>
 		<spring.security.version>4.2.17.RELEASE</spring.security.version>
 		<log4j2.version>2.13.3</log4j2.version>
-		<junit.version>5.5.2</junit.version>
+		<junit.version>5.7.0</junit.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+
+		<!-- SONAR -->
+		<sonar.exclusions>src/main/java/fr/insee/rmes/queries/**/*,
+			src/main/java/fr/insee/rmes/modeles/**/*</sonar.exclusions>
+		<sonar.projectKey>${project.groupId}:${project.artifactId}</sonar.projectKey>
+		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+		<sonar.language>java</sonar.language>
+		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+		<version.maven-jacoco>0.8.5</version.maven-jacoco>
+		<version.maven-sonar>3.7.0.1746</version.maven-sonar>
+		<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea
+			-Dfile.encoding=UTF-8</argLine>
+		<sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
+
 	</properties>
 
 	<repositories>
@@ -66,7 +83,12 @@
 			<artifactId>jackson-dataformat-xml</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.zeroturnaround</groupId>
+			<artifactId>zt-zip</artifactId>
+			<version>1.14</version>
+			<type>jar</type>
+		</dependency>
 		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-servlet-core</artifactId>
@@ -238,6 +260,12 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
@@ -420,12 +448,7 @@
 			<artifactId>jdom</artifactId>
 			<version>1.0</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/jaxen/jaxen -->
-		<dependency>
-			<groupId>jaxen</groupId>
-			<artifactId>jaxen</artifactId>
-			<version>1.1.1</version>
-		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
 		<dependency>
 			<groupId>org.jsoup</groupId>
@@ -433,11 +456,26 @@
 			<version>1.7.2</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/jaxen/jaxen -->
+		<!-- Used for LDAP connexion -->
+		<dependency>
+			<groupId>jaxen</groupId>
+			<artifactId>jaxen</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
 		<!-- XHTML to Markdown parser -->
 		<dependency>
 			<groupId>com.vladsch.flexmark</groupId>
 			<artifactId>flexmark-all</artifactId>
 			<version>0.50.42</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<version>1.9</version>
 		</dependency>
 	</dependencies>
 
@@ -462,30 +500,27 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-	
-				<!-- Plugin lancement des tests -->
-		 	<plugin>
+
+			<!-- Plugin lancement des tests -->
+			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
 				<configuration>
 					<includes>
 						<include>**/*Test.java</include>
 					</includes>
 				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.junit.platform</groupId>
-						<artifactId>junit-platform-surefire-provider</artifactId>
-						<version>1.3.2</version>
-					</dependency>
-				</dependencies>
 			</plugin>
+
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+			</plugin>
+
 
 			<!-- Plugin pour prise en compte des tests sur SonarQube plate-forme innovation -->
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.4</version>
 				<executions>
 					<execution>
 						<goals>
@@ -493,19 +528,87 @@
 						</goals>
 					</execution>
 					<execution>
-						<id>jacoco-report</id>
+						<id>jacoco-site</id>
 						<phase>test</phase>
 						<goals>
 							<goal>report</goal>
 						</goals>
-						<!-- default target/jscoco/site/* -->
-						<configuration>
-							<outputDirectory>target/jacoco-report</outputDirectory>
-						</configuration>
 					</execution>
 				</executions>
 			</plugin>
+
 		</plugins>
+		<pluginManagement>
+			<plugins>
+
+				<!-- Pour l'exécution des tests unitaires -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${maven-surefire-plugin.version}</version>
+					<!-- https://carlobertoldi.wordpress.com/2012/03/12/maven-unit-tests-and-those-funny-characters/ -->
+					<configuration>
+						<junitArtifactName>junit:junit</junitArtifactName>
+						<encoding>UTF-8</encoding>
+						<inputEncoding>UTF-8</inputEncoding>
+						<outputEncoding>UTF-8</outputEncoding>
+						<!-- permet la surcharge de maven-surefire-plugin tout en fonctionnant 
+							avec jacoco -->
+						<!-- <argLine>${argLine}</argLine> MAVEN surcharge with properties -->
+					</configuration>
+
+					<executions>
+						<execution>
+							<id>test</id>
+							<phase>test</phase>
+							<goals>
+								<goal>test</goal>
+							</goals>
+							<configuration>
+								<skip>false</skip>
+								<includes>
+									<include>**/*Test.java</include>
+								</includes>
+								<encoding>UTF-8</encoding>
+							</configuration>
+
+						</execution>
+					</executions>
+				</plugin>
+
+
+				<plugin>
+					<groupId>org.sonarsource.scanner.maven</groupId>
+					<artifactId>sonar-maven-plugin</artifactId>
+					<version>${version.maven-sonar}</version>
+				</plugin>
+
+
+				<!-- Plugin pour prise en compte des tests sur SonarQube plate-forme 
+					innovation -->
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>${version.maven-jacoco}</version>
+					<executions>
+						<execution>
+							<id>default-prepare-agent</id>
+							<goals>
+								<goal>prepare-agent</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>report</id>
+							<phase>report</phase>
+							<goals>
+								<goal>report-aggregate</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+
+			</plugins>
+		</pluginManagement>
 	</build>
 
 </project>
